2012-09-12  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1, hashdeep.1: Typos

2012-07-05  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1: Clarified quiet mode, -q.
	* configure.ac: Version bump to 4.3

2012-06-29  Simson Garfinkel  <simsong@imac3.local>

	* src/md5.c (MD5Final): updated md5.c code to remove compiler warning dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]"

2012-06-09  Jesse Kornblum  <research@jessekornblum.com>:

	* src/tiger.h tiger.c: Replaced with newer code from libgcrypt.
	* configure.ac: Version bump to 4.2

2012-06-05  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp: Cosmetic formatting. Fixed Win32 stat function.
	* src/display.cpp: Commented out vasprintf, which is now present on mingw
	* src/hashlist.cpp: Formatting. Revised to handle case where filename is a hash.
	* src/sha1_version.c: Removed vestigial code

2012-06-04  Jesse Kornblum  <research@jessekornblum.com>:

	* src/hashlist.cpp: Formatting. Addressed bug with filenames with commas in them.

2012-05-20  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep1,hashdeep.1: Fixed typo in -j mode

2012-02-27  Simson Garfinkel  <simsong@Mucha.local>

	* src/dig.cpp (state::decode_file_type): removed from state, since it didn't use any of the instance variables.

2012-02-27  Jesse Kornblum  <research@jessekornblum.com>:

	* main.cpp: Removed -B command line flag from all programs

2012-02-27  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1: Added Simson to the AUTHORS section
	* src/main.cpp: Formatted usage messages
	* configure.ac: Version bump to 4.1.1
	* Makefile.am: Added doc to directories cleaned with make nice

2012-02-26  Simson Garfinkel  <simsong@FC15>

	* src/main.h (d): fixed THREAD typo.
	* src/display.cpp: changed #if so that it checks for MINGW and not __MINGW_H
	* configure.ac (MINGW): now explicitly sets MINGW if we are compiling under mingw.
